Fix editor overflow and prevent background scroll

--- a/client/components/dialog/style.scss
+++ b/client/components/dialog/style.scss
@@ -135,3 +135,15 @@
 .dialog__action-buttons .is-left-aligned {
 	float: left;
 }
+
+.ReactModal__Body--open {
+	overflow: hidden;
+}
+
+.ReactModalPortal {
+	overflow: hidden;
+}
+
+html {
+	overflow-y: visible;
+}
